test/2/type/sub/CIII-CII.err
test/2/type/sub/CIII-CII.ploy:2:17-24: type error: annotated: actual struct has extraneous positional field #2 not present in expected struct. actual type: (Int Int Int)
|   _:(Int Int) = (0 0 0)
                  ~~~~~~~
test/2/type/sub/CIII-CII.ploy:2:5-14: note: expected type: (Int Int)
|   _:(Int Int) = (0 0 0)
      ~~~~~~~~~
