test/2/type/sub/CIII-CII.ploy
main = {
  _:(Int Int) = (0 0 0)
}
